syntax = "proto3";

package notificationpb; // Ensure this matches the generated Go package name

import "google/protobuf/empty.proto";

option go_package = "./pb"; // Updated to match the generated Go package

service NotificationService {
    rpc SendRegistrasiEmailNotification (RegistrationData) returns (WebResponse);
}

message RegistrationData {
    string email = 1;
    string link = 2;
}

message WebResponse{
    string message = 1;
}

message InvoiceData{
    string email = 1;
    string name = 2;
    string status = 3;
    string invoice_id = 4;
    string description = 5;
    string link = 6;
    string ammount = 7;
}